--- a/shoppingsite/products/templates/products/fil&search.html
+++ b/shoppingsite/products/templates/products/fil&search.html
@@ -4,7 +4,7 @@
 <br>
 <div class="header-container prodlist_no">
 	<div class="prod-search-title">
-		<span style="font-size:15px; font-family: 'Playfair Display', serif!important;text-align:left;text-transform:capitalize;">{{ request.path }}</span>
+		<span style="font-size:15px; font-family: 'Playfair Display', serif!important;text-align:left;text-transform:capitalize;"></span>
 			<span style="float:right;">
 				<select style="border:1px solid rgba(0,0,0,0.12);padding-left: 3px;padding-right: 3px;padding: 2px;outline:none;">
 					<option value="Default">Default</option>
@@ -12,7 +12,7 @@
 					<option>Price High To Low</option>
 				</select>
 		</span>
-		<div style="text-align:center;padding:3px;font-family: 'Playfair Display', serif!important;text-transform:capitalize;">{{ product_type.product_type_name }}</div>
+		<div style="text-align:center;padding:3px;margin-left: 116px;font-family: 'Playfair Display', serif!important;text-transform:capitalize;">{% if name %}{{name}} {% endif %}{{ product_type.product_type_name }}</div>
 	</div>
 	<div class="hr-line" style="background-color: rgba(0,0,0,0.05);"></div>
 		{% if product_type.product_set.all %}
