--- a/shoppingsite/templates/base.html
+++ b/shoppingsite/templates/base.html
@@ -13,6 +13,9 @@
 <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
 <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+{% block style %}
+<style></style>
+{% endblock %}
 </head>
 <body>
 <div class="main-header">
